@startuml
!include style.iuml
hide footbox
top to bottom direction
skinparam linetype ortho
skinparam shadowing false
skinparam nodesep 40
skinparam ranksep 70
skinparam horizontalLabelDistance 120
skinparam verticalLabelDistance 24
skinparam entityPadding 22

entity "users" as USERS {
  * user_id : INT <<PK>>
  --
  username : VARCHAR
  email : VARCHAR
  password : VARCHAR
  profile_bio : TEXT
  join_date : DATETIME
  last_login : DATETIME
  is_active : BOOLEAN
}

entity "games" as GAMES {
  * game_id : INT <<PK>>
  --
  author_id : INT <<FK>>
  title : VARCHAR
  description : TEXT
  game_content : JSON
  is_published : BOOLEAN
  likes_count : INT
  plays_count : INT
  create_date : DATETIME
  update_date : DATETIME
}

entity "playthroughs" as PLAYTHROUGHS {
  * playthrough_id : INT <<PK>>
  --
  game_id : INT <<FK>>
  user_id : INT <<FK>>
  game_state : JSON
  status : ENUM
  start_date : DATETIME
  last_active : DATETIME
}
entity "comments" as COMMENTS {
  * comment_id : INT <<PK>>
  --
  game_id : INT <<FK>>
  user_id : INT <<FK>>
  content : TEXT
  date_posted : DATETIME
  is_edited : BOOLEAN
}

entity "likes" as LIKES {
  * like_id : INT <<PK>>
  --
  user_id : INT <<FK>>
  game_id : INT <<FK>>
  date_liked : DATETIME
}



' Zakomentowane widoczne relacje (przenoszenie tabel przed łączeniem)
'GAMES ||--o{ PLAYTHROUGHS : "\nrozgrywki\n0..*"
USERS ||--o{ PLAYTHROUGHS : "gracz\n0..*"
USERS ||--o{ GAMES : "autor\n1..*"
GAMES ||--o{ COMMENTS : "komentarze\n0..*"
USERS ||--o{ COMMENTS : "autor_komentarza\n0..*"
USERS ||--o{ LIKES : "użytkownik\n0..*"
GAMES ||--o{ LIKES : "polubienia\n0..*"

' Hidden edges to influence layout: arrange as top/mid/bottom rows
' Top row: USERS and COMMENTS
USERS -[hidden]-> COMMENTS

' Middle row: GAMES centered
USERS -[hidden]-> GAMES
COMMENTS -[hidden]-> GAMES

' Bottom row: PLAYTHROUGHS and LIKES
PLAYTHROUGHS -[hidden]-> LIKES
PLAYTHROUGHS -[hidden]-> GAMES
LIKES -[hidden]-> GAMES

' Additional hidden chains to enforce rows and columns
USERS -[hidden]-> COMMENTS
USERS -[hidden]-> COMMENTS
COMMENTS -[hidden]-> GAMES
USERS -[hidden]-> GAMES
GAMES -[hidden]-> PLAYTHROUGHS
GAMES -[hidden]-> LIKES
PLAYTHROUGHS -[hidden]-> LIKES
@enduml
